fix layout bugs

--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,7 @@ html {
   height: env(safe-area-inset-bottom);
   background: #f5f5f5;
   position: fixed;
+  z-index: 1;
   bottom: 0;
   left: 0;
   right: 0;
@@ -55,10 +56,8 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  width: 100%;
+  height: calc(100% + env(safe-area-inset-bottom) * 1.5);
   overflow: hidden;
   padding: env(safe-area-inset-top) env(safe-area-inset-right)
     env(safe-area-inset-bottom) env(safe-area-inset-left);
